--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -67,6 +67,16 @@ p {
     background-color: var(--background-color);
 }
 
+footer span {
+    background-color: var(--black);
+    height: 100px;
+    display: grid;
+    place-content: center;
+    color: var(--background-color);
+    font-weight: 300;
+    font-size: 10pt;
+}
+
 @media (max-width: 768px) {
     #about-me article {
         display: flex;
