--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -92,4 +92,8 @@ footer span {
     #contact-me article {
         height: calc(100vh + 40px + 40px - 50px); /* margin-top + margin-bottom da .ul-menu-li */
     }
+    footer span {
+        text-align: center;
+        padding: 0 30px;
+    }
 }
