--- a/src/components/Habilities/Habilities.css
+++ b/src/components/Habilities/Habilities.css
@@ -58,10 +58,13 @@
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 599px) {
     #education article #education-habilities-h1 {
         color: var(--black);
         text-align: center;
         font-size: 30pt;
+    }
+    #education article .education-habilities-container-card span {
+        font-size: 12pt;
     }
 }
