--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -109,7 +109,7 @@
     fill: var(--black);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 796px) {
     #my-projects article h1 {
         margin: 100px 0 10px 0;
     }
@@ -117,7 +117,7 @@
         font-size: 10pt;
     }
     #my-projects article .my-projects-container-right {
-        margin: 50px 0 0 0;
+        margin: 50px 50px 0 50px;
     }
     #my-projects article .my-projects-container-right p {
         text-align: justify;
