--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -49,7 +49,7 @@
             font-size: 10pt;
         }
         .contact-me-article-social-icon {
-            margin: 20px 15px 0 15px; /* Ajuste para tamanhos menores de tela */
+            margin: 20px 15px 0 15px;
             height: 150px;
             width: 60px;
         }
