--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -117,11 +117,15 @@
         font-size: 10pt;
     }
     #my-projects article .my-projects-container-right {
-        margin: 50px 50px 0 50px;
+        margin: 50px 0 0 0px;
     }
     #my-projects article .my-projects-container-right p {
         text-align: justify;
         width: 75vw;
         word-spacing: -1.5px;
+    }
+    #my-projects article .my-projects-container {
+        display: flex;
+        flex-direction: column;
     }
 }
